--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- reset css -->
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <!-- style -->
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>FIGMA TO HTML </title>
 </head>
 <body>
     <p>FIGMA TO HTML</p>
+    <h2>demo</h2>
 </body>
 </html>
